+ fix issues in btormc
+ fix issue with get-value for Boolean variables
+ fix issue with get_failed_assumptions in combination with push/pop
+ fix get-unsat-assumptions printing
+ export enums for setting options (option values)
+ get-model is now SMT-LIB standard compliant
+ PyPi packages for Boolector
+ remove obsolete CL option --smt2-model (use -m --output-format=smt2 instead)

 news for release 3.2.1 since 3.2.0
--------------------------------------------------------------------------------
+ initial version of Dockerfile for Boolector
  (thanks to Andrew V. Jones)
+ fix issue with infinite recursion in Python API
  (thanks to Andrew V. Jones)
+ fix issue with dumping constant arrays
+ fix issue with reset assumptions and checking of failed assumptions
+ fix witness printing in btormc

 news for release 3.2.0 since 3.1.0
--------------------------------------------------------------------------------
+ new dumper CNF printer (enable with CLI option -dd and API option
  BTOR_OPT_PRINT_DIMACS)
+ fix issue with model construction for constant arrays
+ boolector_sat is not automatically called on smt2 input anymore, must be
  explicitly called via (check-sat) in the input file
+ smt2:
  - support for parsing constant arrays
  - support for :global-declarations
+ API changes:
  - boolector_ror and boolector_rol now allow same bit-width for both operands
+ new API calls
  - boolector_roli
  - boolector_rori

 news for release 3.1.0 since 3.0.0
--------------------------------------------------------------------------------
+ build system:
  - requires now cmake >= 3.3
  - exports library interface for using find_package(Boolector) in cmake projects
+ support for custom abort callback function
  (called on abort instead of actually aborting)
+ Python API now throws Python exceptions on abort conditions
  (e.g., when underlying C API is misused)
+ command line options that previously expected integer values denoting enum