@@ -8,6 +8,8 @@
 + get-model is now SMT-LIB standard compliant
 + PyPi packages for Boolector
 + remove obsolete CL option --smt2-model (use -m --output-format=smt2 instead)
++ new API calls
+  - boolector_get_value
 
  news for release 3.2.1 since 3.2.0
 --------------------------------------------------------------------------------
